--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,14 @@
-<html>
-    <head>
-        <title>My blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">My blog</a></h1>
-        </div>
+{% extends 'blog/base.html' %}
+
+{% block content%}
     {% for post in posts %}
-        <div>
-            <p>published: {{ post.published_date }}</p>
-            <h1><a href="">{{ post.title }}</a></h1>
+        <div class="post">
+            <div class="date">
+                <p>published: {{ post.published_date }}</p>
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
-    </body>
-</html>
+{% endblock %}
+                
